@@ -72,11 +72,18 @@ function dub.minHash(list_or_obj, func)
 end
 
 local shown_warnings = {}
-function dub.warn(fmt, ...)
+function dub.printWarn(fmt, ...)
   local msg = string.format(fmt, ...)
   if not shown_warnings[msg] then
     print('warning:', msg)
     shown_warnings[msg] = true
   end
 end
-dub.warn_method = dub.warn
+function dub.silentWarn(fmt, ...)
+  local msg = string.format(fmt, ...)
+  if not shown_warnings[msg] then
+    shown_warnings[msg] = true
+  end
+end
+dub.warn = dub.printWarn
+
